2A/05_Projet_GL/src/test/deca/context/valid/complet/86_multi_select_complexe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    boolean b ;


}

class B extends A {
    A a ;
    A getA() {
        return a ; 
    }
}

class C extends B {
    B b ; 
    B getB() {
        return b ; 
    }
}

class D extends C {
    C c ;
    C getC() {
        return c ;
    }

}

{
    D d ; 
    boolean b = d.getC().getB().getA().b ;
}
