2A/05_Projet_GL/src/test/deca/context/invalid/complet/68_redf_method_param_taille_diff.deca
// Description :
//   une redefinition d'une methode invalide 
// Resultats :
//    ligne 16 :  une méthode rédefine doit avoir la même signature que la méthode héritée
// Historique : 
//  cree le 16/01/2024

class A {
    int add(int a ) {
        return a + 1 ; 
    }
}

class B extends A {

    int add(int a , int b ) {
        return a + b ; 
    }
}